<resources>
    <string name="app_name">Hajj Dost</string>
    <string name="alHaram">Kaaba is called Baitullah or the house of Allah. It is the delight of a Muslim. So In Masjid Al Haram you will see Kaaba, Safa, Hajr-e-Aswad, Maqam e Ibrahim, Safa and Marwah. And drink the Blesses ZamZam water.Al-Masjid Al-Haram is in the city of Mecca, Saudi Arabia. It is the largest an oldest mosque in the world an surrounds ane o Islams holiest places, the Kaaba.It is considered the holiest place on Earth by Muslims. The mosque is also known as the Grand Mosque. This mosque has nine minarets. Like Masjid al-Nabawi in Medina, it also has undergone many renovations and expansions. The latest expansion was during King Fahds reign. Further expansion was planned by the former ruler, King Abdullah.Great Mosque of Mecca, Arabic al-Masjid al-Ḥarām, also called Holy Mosque or Haram Mosque, mosque in Mecca, Saudi Arabia, built to enclose the Kaʿbah, the holiest shrine in Islam.</string>
    <string name="masjidAisha">(The second largest Mosque in Mecca)\nMasjid Aisha has a capacity of Capacity, 47,084 worshipers. It is the Place, where people of Mecca put Ihram and people doing subsequent Umrah renew their Ihram.
        Masjid Aisha, also known as Masjid at-Tan’eem marks the place where Ummul-Mu’mineen Aisha (may Allah be pleased with her) went to enter into Ihram for Umrah when the Prophet (peace and blessings of Allah be on him) told her to do so during the farewell Hajj.
        The masjid lies 7.5 km south from Makkah on the road to Medina and is the closest of all the boundary points.Masjid e Taneem is a mosque in the Al-Hil area about 5 miles away from the Holy Kaaba, in Taneem, which is near Mecca and acts as Miqat (a station for putting on pilgrims garments) for people living in Mecca.This mosque is also known as Masjid -e- Ayesha since Muhammads wife Ayesha had put her Ihram (restriction on Pilgrimage) from this place once. If someone is living in Mecca and wants to perform Umra (pilgrimage to Mecca) then he should go to this place, enter into the state of Ihram (in part by putting on pilgrims garments) and then return to Mecca so that the condition of traveling for the pilgrims is also fulfilled. Muhammad said “Part of the worship of Hajj and Umra is to travel in the way of Allah and to go out of the city.This is quite a big mosque with facilities for baths, ablution and changing, available for pilgrims and those who come to offer regular prayers.</string>
    <string name="masjidJin">According to tradition, this is a mosque situated on the Al Haram Street, where once the Holy Prophet (SAW) was reciting the Holy Qura’an. A group of Jinn passing by heard the recitation and stopped to hear more.
Masjid Jinn, also known as Masjid Haras, is built on the place where the Prophet (peace and blessings of Allah be on him) drew a line for Abdullah bin Mas’ood (may Allah be pleased with him) who had accompanied him after he had been commanded to recite the Qur’an to the Jinn.
Abdullah bin Mas’ood (may Allah be pleased with him) narrates, “While in Makkah, the Prophet (peace and blessings of Allah be on him) once said to the Sahabah (may Allah be pleased with them), ‘Whoever wishes to see what the Jinn are all about should come along’. Besides myself no-one else came. When we reached the place in the Ma’la district of Makkah the Prophet (peace and blessings of Allah be on him) used his foot to draw a circle on the ground. He then instructed me to sit inside the circle. After proceeding a little further, the Prophet (peace and blessings of Allah be on him) started reciting the Quran. It then happened that Jinn started to arrive in troops as they gathered there. So many came that I could not even see the Prophet (peace and blessings of Allah be on him) nor hear him. The Prophet (peace and blessings of Allah be on him) then continued talking with a group of them until Fajr.
</string>
    <string name="masjidBilal">This was the place of Residence of Hazrat Bilal (R.A) which was later converted to saudi Government.</string>
    <string name="alKhayfMosque">This Masjid is located at the foot of a mountain in the south of Mina, close to the smallest Jamarat. Masjid al-Khayf is a Masjid where virtues are proven in some Hadith.
This masjid is located at the foot of a mountain in the south of Mina, close to the smallest Jamarat. It was at this spot that the Prophet (peace and blessings of Allah be on him) and numerous other Prophets before him performed salah.
Masjid al-Khayf is a masjid whose virtues are proven in some Hadith. According to a traceable Hadith of Ibn Abbas (may Allah be pleased with him), the Prophet (peace and blessings of Allah be on him) said: “Seventy Prophets prayed in Masjid al-Khayf.
Yazeed bin Aswad (may Allah be pleased with him) says that when he performed Hajj with the Prophet (peace and blessings of Allah be on him), it was at the Masjid Khayf that he performed the Fajr salah with the Prophet (peace and blessings of Allah be on him).
Abdullah bin Abbas (may Allah be pleased with him) narrates that it was in Masjid al-Khayf that the Prophet (peace and blessings of Allah be on him) addressed them. After praising Allah he said: “Allah will set right the affairs of the person whose prime concern is the Aakhirah (Hereafter), Allah will also grant him self-sufficiency and the world will humble itself before him. As for the person whose prime concern is this world, Allah will scatter his affairs, place poverty in front of him and all he will get of this world will be what has been predestined for him.
</string>
    <string name="Muzdalifa">Muzdalifah stretches from the Valley of Muhassar to the mountains of Ma’zamyn. It is four kilometers long and covers an area of 12.25 square kilometers.
This is a view of Muzdalifah, where Hajj pilgrims arrive after sunset from Arafat on the 9th Dhul Hijjah (second day of Hajj). Muzdalifah stretches from the Valley of Muhassar to the mountains of Ma’zamayn. It is four kilometres long and covers an area of 12.25 square kilometers. Referring to Muzalifah, Allah (Glorified and Exalted is He) mentions in Surah Baqarah in the Quran:“When you leave Arafat, then remember Allah at the Mash’arul Haram.” (‘The Sacred Monument’, referring to Muzdalifah according to Abdullah bin Umar (may Allah be pleased with him). During the farewell Hajj, the Prophet (peace and blessings of Allah be on him) performed the Maghrib and Isha salats together at Muzdalifah. He stayed at the spot where the present Masjid Mash’arul Haram currently is (towards the Qibla side). From there, the Prophet (peace and blessings of Allah be on him) said:“Although I am staying here, you may stay anywhere throughout Muzdalifah. During Hajj It is waajib to perform Maghrib and Isha together in Muzdalifah at Isha time. Wuqoof (stay) of Muzdalifah is also waajib and it’s time begins from sub’h saadiq and ends at sunrise. If one spent even a little portion of their time in Muzdalifah, he/she will be absolved of this obligation. However, it is best to remain until just before sunrise.
</string>
    <string name="Jamaraat">It is the place where the Hajjis stone the Shaitan during Hajj.
The Jamarat are three stone pillars which are pelted as a compulsory ritual of Hajj in emulation of the Prophet Ebrahim (upon him be peace). They represent the three locations where Ebrahim (upon him be peace) pelted the Shaitan (Satan) with stones when he tried to dissuade him from sacrificing his son Ismail (upon him be peace). The pillars are called ‘Jamarat-al-Ula’, ‘Jamarat-al-Wusta’ and ‘Jamarat-al-Aqaba’.
One of the purposes of the Hajj is to recall, while in Mina, how a 94 year old father brought his eight year old son here for sacrifice. Ebrahim (upon him be peace) had first left his wife and newborn son, Ismail (upon him be peace) in the desert upon Allah’s command. Then while returning after eight years to them he saw a dream wherein a man told him that Allah (Glorified and Exalted is He) wanted him to sacrifice his son. He saw the same dream for three consecutive nights and as he was a Prophet, his dreams were a form of Wahy (Divine Instruction). He realised that Allah (Glorified and Exalted is He) wanted him to sacrifice his son for whom his heart was overfilled with love and emotions. He went to his wife and asked her to dress up Ismail (upon him be peace). Ismail (upon him be peace) was overjoyed that his father had come after such a long time and was now taking him out for a walk. When Hajra (upon her be peace) asked, “Where are you taking him?” He replied, “To meet a friend.”
They then reached Mina. Here Ebrahim (upon him be peace) asked his son that your father has seen such a dream, what is your opinion about it? The reason for asking was not to ask his opinion in deciding whether to go ahead with the command or not. It was to assess whether his son will allow him to follow the command freely or will he have to forcibly carry out this order. In other words, he asked this to test the intensity of love for Allah in his son’s heart. The son replied, “My father, obey the command given by Allah. You will, Insha’Allah, find me steadfast. Give my shirt to my mother as it will be a source of comfort for her and wrap me in your own shirt. Put me face down so you can’t see my face, lest you hesitate in carrying out my slaughter.
</string>
    <string name="mountAbuQubais">Near this is the place where the Prophet (SAW) performed the miracle of splitting the moon in two parts.This large structure, adjacent to Mount Safa, is built on top of Mount Abu Qubais. It is believed that it was from the top of this mountain that the Prophet (peace and blessings of Allah be on him) pointed to the moon and split it into half.The Hajar al-Aswad (The Black Stone) was protected in it when Allah (Glorified and Exalted is He) sent the flood in the time of Prophet Nuh (peace be upon him).The Umayyad governor Hajjaj bin Yusuf fired a catapult from the top of Mount Abu Qubais onto the Ka’bah during the seige of Makkah in 691 CE. This resulted in the killing of Abdullah bin Zubair (may Allah be pleased with him).
The first ever Mountain created by Allah Almighty. This mountain is directly opposite the Ka’aba close to Mount Safa. Hazrat Adam [AS] took rocks from this mountain when he built the Ka\'aba very first time on earth. After building the Ka\'aba, Prophet Ibrahim [AS] stood on this mountain and called mankind to come and worship Allah. When Hazrat Nooh [AS] flood came the Hajrey Aswad [The Black Stone] was placed over this mountain. When the Holy Prophet [PBUH] first started preaching Islam publicly, he stood on Jabal Abu Qubais and called mankind to submit to Allah. It was whilst he was on this mountain that Holy Prophet [PBUH] split the moon in two. Prophet Mohammad Mustafa [saww] showed the miracle of Splitting the moon into two halves over this mountain.
</string>
    <string name="qOne">How to change profile?</string>
    <string name="ansOne">To change/update profile open profile, then click EDIT PROFILE, make changes you want then click on UPDATE</string>
    <string name="qTwo">How to check group members?</string>
    <string name="ansTwo">Click My Group button to show your group members and there you can also see the numbers of members in your group, so that no one can enter in your group </string>
    <string name="qThree">How to read and listen pray?</string>
    <string name="ansThree">Click the Pray button to show pray, if you want to listen pray press the play icon.</string>
</resources>