<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".HelpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qOne"
        android:textSize="24dp"
        android:background="@color/listBackground"
        android:textColor="@color/textColor"
        android:padding="4dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ansOne"
        android:textSize="18dp"
        android:padding="4dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/qTwo"
        android:textSize="24dp"
        android:background="@color/listBackground"
        android:textColor="@color/textColor"
        android:layout_marginTop="24dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ansTwo"
        android:textSize="18dp"
        android:padding="4dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/qThree"
        android:textSize="24dp"
        android:background="@color/listBackground"
        android:textColor="@color/textColor"
        android:layout_marginTop="24dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ansThree"
        android:textSize="18dp"
        android:padding="4dp"
        />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1621044802376539/9545181056">
    </com.google.android.gms.ads.AdView>


</LinearLayout>